// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.U checkGrammar 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkGrammar 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkGrammar 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkGrammar 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkHighlight 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkHighlight 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkHighlight 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkHighlight 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkSpaces 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkSpaces 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkSpaces 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U checkSpaces 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U className 1`] = `
<u
  className="uu5-bricks-u my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U content 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</u>
`;

exports[`UU5.Bricks.U content 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</u>
`;

exports[`UU5.Bricks.U content 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</u>
`;

exports[`UU5.Bricks.U content 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</u>
`;

exports[`UU5.Bricks.U controlled 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U controlled 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U controlled 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U controlled 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U default props 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U disabled 1`] = `
<u
  className="uu5-bricks-u uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</u>
`;

exports[`UU5.Bricks.U disabled 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U disabled 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U disabled 4`] = `
<u
  className="uu5-bricks-u uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</u>
`;

exports[`UU5.Bricks.U docKit examples UU5.Bricks.U should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    className={null}
    content="This is normal text"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <P
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    This is 
    <U
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID04"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      underlined
    </U>
     text
  </P>
</div>
`;

exports[`UU5.Bricks.U dynamic 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U dynamic 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U dynamic 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U dynamic 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U hidden 1`] = `
<u
  className="uu5-bricks-u uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U hidden 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U hidden 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U hidden 4`] = `
<u
  className="uu5-bricks-u uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U id 1`] = `
<u
  className="uu5-bricks-u"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U ignoreHTML 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U ignoreHTML 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U ignoreHTML 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U ignoreHTML 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U mainAttrs 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U name 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U noIndex 1`] = `
<u
  className="uu5-bricks-u uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U noIndex 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U noIndex 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U noIndex 4`] = `
<u
  className="uu5-bricks-u uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U selected 1`] = `
<u
  className="uu5-bricks-u uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U selected 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U selected 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U selected 4`] = `
<u
  className="uu5-bricks-u uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U style 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.U style 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.U style 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.U style 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.U textCorrector 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U textCorrector 2`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U textCorrector 3`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U textCorrector 4`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.U tooltip 1`] = `
<u
  className="uu5-bricks-u"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
